crates/polaris_system/tests/compile_fail/sync_system.rs
use polaris_system::system;

#[system]
fn sync_system() -> i32 {
    42
}

fn main() {}
